<resources>
    <string name="app_name">NetFlix</string>
    <string name="texto1">O catálogo de NetFlix está ainda maior!</string>
    <string name="texto2">Em parcería com outros servíços de streaming e a centralização dos serviços tudo está aqui!! </string>
    <string name="texto3">Insira seu nome</string>
    <string name="texto11">Insira sua senha</string>
    <string name="texto4">Concluir cadastro</string>
    <string name="texto5">Porfavor insira seu nome</string>


    <string name="texto6">Animes</string>
    <string name="texto7">Uns desenhos asiáticos</string>
    <string name="texto8">°Comédia</string>
    <string name="texto9">°Magía</string>
    <string name="texto10">°Fantasia</string>
    <string name="texto12">Insira seu nome</string>
    <string name="texto13">Insira uma senha</string>
    <string name="info3telaRegistro">Tudo pronto para assitir?</string>
    <string name="info4telaRegistro">Informe seu nome e sua senha para proseguir</string>
    <string name="infoTelaPerfil">Agora escolha sua foto de perfil</string>


    /*
    //Filmes
    <string name="ko">Kono Subarashii Sekai ni Bakuen wo!</string>


    <string name="aviso">Aviso!</string>
    <string name="aviso1">Este projeto não tem qualquer intenção de publicar os materiais sem dar os devidos créditos aos criadores </string>
    <string name="aviso2">A intenção do projeto não é subistituir quaisquer meios de assistir conteudo dos autores citados no projeto</string>
    <string name="aviso3">mas sim demonstrar a facilidade e conhecimento da ferramenta utilizada (Android Studio) na criação de grandes aplicativos no mercado</string>
    <string name="aviso4">Inspirado em um post do Instagram em que o usuário demonstra a interfaçe da Netflix funcional, então realizei uma parodia do aplicativo</string>
    <string name="aviso5">No canto inferior direito clique em "MEU PERFIL"  para acessar as "CONSIDERAÇÕES" </string>
    <string name="title_activity_menuzin">menuzin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="long_text">Grand Theft Auto VI</string>
    <string name="_00_00_00">00:00:00</string>
<string name="lock">Bloquear</string>
    <string name="audio_sub">Legendas</string>
    <string name="rotate">Girar a tela</string>
    <string name="unlock_controls">Desbloquear controles?</string>
    <string name="screen_locked">Tela bloqueaada</string>
    <string name="tap_to_unlock">Aperte para desbloquear</string>
</resources>