<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    tools:context=".View.TelaRegistro">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fotonetpronto"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:alpha="0.4"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/info3telaRegistro"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_210sdp"
        android:layout_marginStart="@dimen/_85sdp"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_26sdp"
        android:text="@string/info4telaRegistro"
        android:textSize="@dimen/_10sdp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        android:layout_marginTop="@dimen/_235sdp"
        android:layout_marginStart="@dimen/_85sdp"
        android:textColor="@color/white"/>

    <EditText
        android:inputType="text"
        android:drawableStart="@drawable/ic_baseline"
        android:ems="10"
        android:drawablePadding="10dp"
        android:id="@+id/edtTextNome"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:padding="25dp"
        android:layout_marginStart="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_269sdp"

        android:textColorHint="@color/white"
        android:background="@drawable/ic_edt1"
        android:hint="@string/texto3"
        android:textColor="@color/white"/>

    <EditText
        android:inputType="text"
        android:drawableStart="@drawable/ic_baseline"
        android:ems="10"
        android:drawablePadding="10dp"
        android:id="@+id/edtTextSenha"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:padding="25dp"
        android:layout_marginStart="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_349sdp"
        android:textColorHint="@color/white"
        android:background="@drawable/ic_edt1"
        android:hint="@string/texto11"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/bnt2"
        android:background="@drawable/ic_botao2"
        android:layout_width="310dp"
        android:layout_height="80dp"
        android:layout_marginTop="560dp"
        android:layout_marginStart="44dp"
        android:text="@string/texto4"
        android:textColor="@color/white"
        android:onClick="gravar"/>

</RelativeLayout>