<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    tools:context=".View.TelaApresentacao">
    
    


    <ImageView
        android:id="@+id/sliderImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fotonetpronto"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:alpha="0.4"/>



    <TextView
        android:id="@+id/privaBotao"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/_103sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:clickable="true"
        android:text="PRIVACIDADE"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/entrarBotao"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/_223sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:clickable="true"
        android:text="ENTRAR"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="500dp"
        android:text="@string/texto1"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="530dp"
        android:text="@string/texto2"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:textStyle="italic"
        tools:ignore="TextSizeCheck"/>


    <Button
        android:id="@+id/bnt1"
        android:background="@drawable/ic_botao2"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginTop="590dp"
        android:layout_marginStart="45dp"
        android:text="@string/texto3"
        android:textColor="@color/white"
        android:onClick="bnt1"/>


</RelativeLayout>